--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>가평고 컴퓨터 동아리 </title>
+<title>yo333 </title>
 <meta charset="utf-8">
 </head>
 
@@ -19,5 +19,6 @@ iam <strong> <u>한솔</u> </strong>
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
 
+<img src="wow.jpg" width="100%">
 </body>
 </html>
