--- a/2.html
+++ b/2.html
@@ -3,15 +3,45 @@
 <head>
 <title>yo22 </title>
 <meta charset="utf-8">
+
+
+<style>
+a {
+  color:black;
+  text-decoration: none;
+}
+.saw{
+  color:gray;
+}
+#active{
+  color:red;
+}
+h3 {
+  font-size: 80px;
+  text-align: center;
+}
+</style>
+
+
 </head>
 
 <body>
   <h1><a href="index.html"web</h1>
+  <h3>hohoho</h3>
 <ol>
-  <li><a href="1.html">1학년</a></li>
-  <li><a href="2.html">2학년</a></li>
-  <li><a href="3.html">3학년</a></li>
+  <li><a href="1.html"class="saw">1학년 </a></li>
+  <li><a href="2.html"class="saw" id="active" >2학년 </a></li>  <!--#style이라고 써있으면css 문법적요소 태그 안에 있으면 속성 css적으로 적용 -->
+  <li><a href="3.html">3학년 </a></li>
 </ol>
+
+<!--
+<ol>
+  <li><a href="1.html"><font color="red">1학년</font> </a></li>
+  <li><a href="2.html"><font color="red">2학년</font> </a></li>
+  <li><a href="3.html"><font color="red">3학년</font> </a></li>
+</ol>
+-->
+
 
 <h2><a href="https://www.naver.com/" target="_blank">hello web</a></h2>
 iam <strong> <u>한솔</u> </strong>
