--- a/4.html
+++ b/4.html
@@ -77,15 +77,15 @@ h3 {
 </head>
 
 <body>
-  <h3>Metaverse</h3>
+  <h3>Server internet</h3>
 
 
 <div id="grid">
 
 <ol>
-  <li><a href="1.html" style="text-decoration:underline; color:white"; > Metaverse </a></li>
+  <li><a href="1.html" style="color:white"; > Metaverse </a></li>
   <li><a href="2.html" style="color:white;"  > WEB'S LOGIC </a></li>
-  <li><a href="4.html" style="color:white";> Server internet </a></li>
+  <li><a href="4.html" style="text-decoration:underline; color:white";> Server internet </a></li>
 </ol>
 
 <div id="article">
@@ -99,51 +99,12 @@ h3 {
 소설에서 현실과 가상세계를 오가는 주인공 피자배달원이 아바타로 구현되어 전사이자 영웅으로 활약하는 가상세계를 '메타버스'라 불렀다.
 <strong> <u>!!!!!</u> </strong>
 
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/gElfIo6uw4g"
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
-clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p>This is a paragraph.</p>
 </div>
 </div>
 
 
 <p>This is another paragraph.</p>
-
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web-1-zwfuyzxlpw.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/612f603c649e0a0a5cd406ab/1feggvra1';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-
 
 
 </body>
