--- a/2.html
+++ b/2.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html>
 <head>
-<title>yo22 </title>
+<title>autonomous driving</title>
 <meta charset="utf-8">
+
+
 
 <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+
 body {
   background-color: black;
-   font-family: 'Bebas Neue', cursive;
+
 }
 
 
@@ -26,15 +29,17 @@ h3 {
   border-bottom:1px solid blue;
   padding:60px;
   margin:0;
-  background-image: url("image/bg.gif");
+  background-image: url("tesla.jpg");
 }
  #grid ol{
 
   margin:0;
   padding: 30px;
-  padding-right: 12px;
+  padding-right: 0px;
   padding-left:23px;
   border-right:1px solid green;
+  width:190px;
+
 
 
 }
@@ -45,14 +50,17 @@ h3 {
    color:white;
  }
 
-  li {
-    font-size: 30px;
-  }
+
 
   #article {
-    padding-left: 40px;
+    padding-left: 80px;
   }
 
+  #article li{
+
+     font-size: 20px;
+
+  }
 
    @media(max-width:600px){
 
@@ -62,6 +70,7 @@ h3 {
   }
   #grid ol{
     border-right:none;
+
   }
   h3{border-bottom:none;
   }
@@ -71,75 +80,112 @@ h3 {
 
   }
 
+  }
+
+  #ababab {
+    font-size: 5px;
+  }
+
+  li {
+   font-size: 30px;
+
+  }
+
+
 </style>
 
 
 </head>
 
 <body>
-  <h3>WEB'S LOGIC</h3>
+  <h3>테슬라</h3>
+  <a href="index.html";><font color="white">home</font></a>
+  <br>
+  <a href="chat.html";><font color="white">chat</font></a>
 
 
 <div id="grid">
 
+
 <ol>
-  <li><a href="1.html" style="color:white"; > Metaverse </a></li>
-  <li><a href="2.html" style="text-decoration:underline; color:white;"  > WEB'S LOGIC </a></li>
-  <li><a href="4.html" style="color:white";> Server internet </a></li>
+  <li><a href="1.html" style=" color:white"; > 자율주행이란? </a></li>
+  <li><a href="1ALPHA.html" style=" color:white"; > SLAM  </a></li>
+  <li><a href="2.html" style="text-decoration:underline; color:white";  > 테슬라의 모델 </a></li>
+  <li><a href="4.html" style="color:white";> 윤리적 문제 </a></li>
 </ol>
 
 <div id="article">
 <h1><a href="https://www.google.com/" target="_blank" style="color:white;">Search</a></h1>
+<p><font size="10" color="red"><strong>Tesla Autopilot</strong></font></p>
+테슬라에서 사용되고 있는 ADAS 시스템으로서, 자율주행 5단계인 '운전자 없는 자동차를 주행' 하는 것을 목표로 하고 있다. 현재 자율주행 2단계에
+속하며 테슬라의 주행보조기능을 수행하고 있다.
+2021년, 활성화된 오토파일럿 기능은 운전자의 적극적인 제어가 필요하며 자율주행 레벨 5가 아닌 자율주행 레벨 2에 해당한다.
+이 기능을 활성화하고 실제로 사용하기까지 수십억 마일의 주행 테스트를 통해 차량의 자율주행 능력이 운전자의 주행 능력보다
+앞선다는 신뢰성과 규제 기관의 승인에 달려 있으며 일부 관할권에서는 규제 승인이 더 오래 걸릴 수 있다고 한다. 이미 음주운전등을 하는
+ 운전자보다는 안전하다고도 볼 수 있다.
+더 안전한 운전을 위해 자율주행 기능이 진화함에 따라 차량도 무선 소프트웨어(OTA)를 통해 지속적으로 업그레이드 될 예정이다.
+<br>
+<br>
+<br>
 
-'초월한', '그 이상의'라는 뜻의 '메타(meta)'와 '세계'라는 뜻의
-'유니버스(universe)'를 조합한 말로 '현실을 초월하여 만들어낸 세계',
-'현실과 가상이 혼재된 세계'라는 의미이다. 일반적으로 가상과 현실이 상호작용을 하며
-다양한 사회·경제·문화 활동이 벌어지는 세상으로 정의된다. 또 VR(가상현실)·AR(증강현실)과 같은 가상융합기술(XR)이 활용되는 확장가상세계로 정의하기도 한다.
-이 용어는 1992년 발표된 미국의 공상과학 소설가 닐 스티븐슨의 소설 ≪스노 크래시 Snow Crash≫에서 처음 등장하였는데,
-소설에서 현실과 가상세계를 오가는 주인공 피자배달원이 아바타로 구현되어 전사이자 영웅으로 활약하는 가상세계를 '메타버스'라 불렀다.
-<strong> <u>!!!!!</u> </strong>
+<li>2020년 2월까지 테슬라 오토파일럿의 운행거리 및 데이터의 축적량은 다음과 같다.</li>
+<li>오토파일럿 총 도로운행 거리: 30억 마일(48억km)</li>
+<li>오토파일럿 내비게이션: 10억 마일(16억km)</li>
+<li>자율 차선 변경: 20만회</li>
+<li>운행 국가: 50개국이상</li>
+<li>자율 비상 브레이크: 전 테슬라 차량중 하루 수십-수백회 가량</li>
 
-<p>This is a paragraph.</p>
+<p>테슬라는 ADAS 기능들을 자동운행(Autopilot)과 완전자율주행(FSD; Full Self Driving Capability)로 나누어서 구분하고 FSD는 별도의 추가 비용을 받고 판매하고 있다. FSD 옵션을 구매하지 않아도 하드웨어적으로는 자율주행 레벨 5를 위한 하드웨어 기능을 가지고 판매되고 있으며, 아직은 소프트웨어가 완성되지 않아 자율주행 레벨 5가 가능하지 않다.
+  이후 테슬라 소프트웨어 업데이트를 통해서 뒤에 열거된 자율주행 기능들이 완성되어 각 국가의 법에 맞는 것이 확인될 때, 자율주행 레벨 5가 가능해질 예정이다. 그전까지는 다른 크루즈 컨트롤처럼 운전중에 운전자가 모든 상황을 계속 모니터하다가 문제가 있을 경우 수동 운전으로 변경하여 상황을 운전자가 제어해야 한다.
+
+따라서 모든 자율주행 레벨 5가 완성되어 출시되기 전까지는 이런 ADAS 기능은 완전 무인운전이 가능하지 않다는 것을 잘 인식해야 한다. 속도를 자동으로 유지해 주는 크루
+즈 컨트롤처럼 자동으로 속도와 조향 방향을 조정해 주지만, 운전자는 항상 상황을 주시하고 있다가, 문제가 있는 경우 운전대를 꺾거나 브레이크를 밟으면 오토파일럿 모드가 해제되면서(혹은 자율주행 스틱으로 직접 해제할 수 있다) 운전 상황을 스스로 통제할 수 있게 된다.</p>
+
+<p><font size="10" color="red"><strong>Tesla Autopilot의 기능</strong></font></p>
+<p><font size="4" color="blue"><strong>현재 적용된 기능은 크게 차선유지, 속도 유지, 차선 변경으로 요약된다.</strong></font></p>
+
+<div id="ababab">
+<li>차선유지 - 타 회사 제품에서도 차선 유지 기능과 마찬가지로 오토파일럿도 차선유지기능을 가지고 있다. 그러나 급한 커브에서 조향이 안되어 차선을 이탈하는 경우가 있으므로 항상 전방을 주시해야 한다.
+  미국보다 고속도로에서도 커브가 많은 한국 고속도로에서 오토파일럿의 차선이탈 사례가 여러 차례 보고되고 있으므로 운전자는 전방주시를 해야 한다.</li>
+<br>
+<li>속도 유지 - 속도 유지에 있어서 출발시앞 차에 더 바짝 붙는 경향이 있었으나, 2020년 무렵에는 이런 문제가 개선되어 선행 차량과의 간격유지를 잘 수행하는 편이다. 다만, 2020년 1월 현재 소위 팬텀 브레이킹(Phantom Braking)이라고 불리는 버그가 존재하고 있다. 전방에 도로 구조물이 있거나 하는 경우에, 레이더 센서가 도로상 장애물이 있는지에 대한 정확한 판단을 하지 못하여 사고 예방 차원에서 제동 동작을 하는 문제이다. 최근에 테슬라 시스템을 해킹하여 관찰하는 해커에 따르면, 레이더 센서가 이런 구조물에 접근할 때 해상도등의 문제로 반사되어 장애물이 존재할 가능성이 높아지는 것을 시연해 보였다. 결국 이 문제의 완전한 해결은 전방의 시야에 대한 정확한 분석으로 장애물 유무에 대한 판단 능력을 높이는 방법밖에 없을 것으로 보인다. 특히 후방에 차간 간격을 매우 좁게 유지하는 차량이 따라오고 있을 때 사고의 위험이 존재하게 되어 불편함을 호소하는 사용자들이 있다.</li>
+<br>
+<li>자동 비상 제동(automated emergency braking) - 2020년 대만에서의 사고를 비롯하여, 전방에 장애물이 있을 때 테슬라 자동차의 자동 비상 제동이 너무 늦거나 충분하지 않게 작동한다는 지적이 있다. 앞으로 개선되어야 할 부분이나, 해당 사고 등에서 테슬라 자동차의 "전방 충돌 경고 기능"이 "끔, 둔감, 보통, 민감"중 어떤 설정으로 되어 있는지는 명시되지 않았다. 따라서 이런 문제를 우려한다면 항상 전방을 주시하여야 하고, 테슬라 소프트웨어 설정에서 "전방 충돌 경고 기능"을 "민감"으로 설정하는 것이 바람직 하다.
+</li>
+<br>
+<li>차선 변경 - 변경하여 들어갈 차선 공간을 평가하여 차선을 변경하는 것은 사람이 사각지대를 확인하면서 변경하는 것보다 훨씬 안전함을 느낄 수 있다. 차선 변경 신호만 넣으면 옆차선의 상황을 미리 확인하여 필요할 경우 속도를 줄이거나 가속하여 신속하게 끼어 들기를 시도한다. 다른 차가 그 공간에 접근해 오기 때문에 차선 변경이 위험할 경우, 빨간색으로 차선을 시각화하여, 사람이 가끔 실수를 저지르는 것보다 훨씬 안전하고 탁월한 성능을 보인다. 단, 일부 구간에서 차선 변경시 변경할 차선의 공간 확인이 확실하지 않아서 사고 예방 차원에서 원래 차선으로 되돌아 오는 문제가 보고 되고 있다.</li>
+<br>
+<li>고속도로 자율주행 - 내비게이션 오토파일럿은 2018년 처음 출시 이후 15개월 동안 개선되어 2019년 말에 한국에서도 출시하였다. 운전자가 핸들에 손을 올리며 전방을 주시하는 것을 전제로, 오토파일럿이 직접 판단하여 차선을 변경하여 고속도로 진입로부터 시작하여, 앞차의 거리에 따라 필요한 가속을 하거나 감속을 하고, 전용차선을 식별하며 차선도 변경하고, 전용차선도 식별하고, 고속도로 진출로까지 진행할 수 있는 편리한 기능이다. 다만 아직 정체길에 적용하기는 어려우며, 또한 진출로로 나갈 경우 감속을 하지 않는 오류도 있기에(개선될 예정) 위에 언급한 대로 운전자는 항상 개입할 준비를 해야 한다.
+</li>
+<br>
+<li>주차장 무인 운행 - 스마트 차량 호출의 경우는 데모로서 재미있게 볼 수 있지만 복잡한 상황에서는 이용하지 않는 것이 바람직하다.</li>
+<br>
+<li>도로 사물 인식 - 도로 표지, 도로 신호등, 도로 장애물등을 인식하는 기능이 2019년 말에 출시되어, 고속도로 뿐만 아니라 국도에서도 운전보조기능으로 운전자의 편의를 도울 수 있게 되었다. 다만 운전자가 꼭 필요한 상황 외에는 대부분의 운전을 맡길 수 있는 "자율주행 레벨 3"은 아니다. 운전자가 운전편의를 돕는 것이므로 현재 자율주행 2단계인 운행보조 기능으로 분류되고 있다.</li>
+<br>
+<li>신호등 및 정지 표지판 제어(Traffic Light and Stop Sign Control / Beta) - 안드레 카패시의 설명처럼 일상적인 정지 신호 뿐만 아니라, 공사 구간에서 정지신호를 수신호로 하고 있는 공사 요원의 신호를 인식하며, 미국의 학교 버스에 달려 있는 정지신호가 펼쳐져 있는지 접혀져 있는지를 인식, 또 나무 가지 등에 의해서 가려진 신호판을 인식하는 등 상당한 발전을 보이고 있다. 정지신호를 실수로 지나치려고 할 경우 자동으로 정지하는 기능도 지속적으로 발전되고 있다. 7월 기준(2020.28.x)으로 정지하는 수준이 인간 운전자보다 너무 빨리 감속을 하는 경향이 있다.
+</li>
+<br>
+<li>신호등 및 정지 표지판 제어 녹색신호 인식 - 2020년 6월 출시된 녹색신호 인식 기능은 이전에 정지선이 빨간색으로만 표시되던 것이 선행차량이 있고 녹색신호가 있으면 정지선이 녹색으로 변경되면서 운전자의 입력없이 진행된다. 이미 몇년 동안 오토파일럿은 선행 차량이 있으면 그를 따라서 교차로를 통과하고 있어 왔었으나, 교통 신호가 녹색인지 적색인지에 대한 인식이 없던 것이 교통신호를 확인하는 것이 차이점이다. 선행차량이 없는 경우 속도를 교차로에 접근할 때 약간씩 줄이며 운전자가 가속 페달을 밟으면 다시 정상 속도로 운행한다. 상당히 부드러운 동작을 하여 기본 설정으로 두고 사용하기에 큰 불편이 없는 상태이다.</li>
+
 </div>
-</div>
-
-
-<p>This is another paragraph.</p>
-
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web-1-zwfuyzxlpw.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<p><font size="10" color="red"><strong>실제 주행 영상</strong></font></p>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tlThdr3O5Qo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/612f603c649e0a0a5cd406ab/1feggvra1';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+
+
+
+
+</div>
+</div>
+
+
+
+
+
+
+
 
 
 
