--- a/2.html
+++ b/2.html
@@ -10,7 +10,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+span{
+  color:yellow;
+    font-weight: bold;
 
+}
 body {
   background-color: black;
 
@@ -145,27 +149,27 @@ h3 {
 <p><font size="4" color="blue"><strong>현재 적용된 기능은 크게 차선유지, 속도 유지, 차선 변경으로 요약된다.</strong></font></p>
 
 <div id="ababab">
-<li>차선유지 - 타 회사 제품에서도 차선 유지 기능과 마찬가지로 오토파일럿도 차선유지기능을 가지고 있다. 그러나 급한 커브에서 조향이 안되어 차선을 이탈하는 경우가 있으므로 항상 전방을 주시해야 한다.
+<li><span>차선유지</span>- 타 회사 제품에서도 차선 유지 기능과 마찬가지로 오토파일럿도 차선유지기능을 가지고 있다. 그러나 급한 커브에서 조향이 안되어 차선을 이탈하는 경우가 있으므로 항상 전방을 주시해야 한다.
   미국보다 고속도로에서도 커브가 많은 한국 고속도로에서 오토파일럿의 차선이탈 사례가 여러 차례 보고되고 있으므로 운전자는 전방주시를 해야 한다.</li>
 <br>
-<li>속도 유지 - 속도 유지에 있어서 출발시앞 차에 더 바짝 붙는 경향이 있었으나, 2020년 무렵에는 이런 문제가 개선되어 선행 차량과의 간격유지를 잘 수행하는 편이다. 다만, 2020년 1월 현재 소위 팬텀 브레이킹(Phantom Braking)이라고 불리는 버그가 존재하고 있다. 전방에 도로 구조물이 있거나 하는 경우에, 레이더 센서가 도로상 장애물이 있는지에 대한 정확한 판단을 하지 못하여 사고 예방 차원에서 제동 동작을 하는 문제이다. 최근에 테슬라 시스템을 해킹하여 관찰하는 해커에 따르면, 레이더 센서가 이런 구조물에 접근할 때 해상도등의 문제로 반사되어 장애물이 존재할 가능성이 높아지는 것을 시연해 보였다. 결국 이 문제의 완전한 해결은 전방의 시야에 대한 정확한 분석으로 장애물 유무에 대한 판단 능력을 높이는 방법밖에 없을 것으로 보인다. 특히 후방에 차간 간격을 매우 좁게 유지하는 차량이 따라오고 있을 때 사고의 위험이 존재하게 되어 불편함을 호소하는 사용자들이 있다.</li>
+<li><span>속도 유지</span>- 속도 유지에 있어서 출발시앞 차에 더 바짝 붙는 경향이 있었으나, 2020년 무렵에는 이런 문제가 개선되어 선행 차량과의 간격유지를 잘 수행하는 편이다. 다만, 2020년 1월 현재 소위 팬텀 브레이킹(Phantom Braking)이라고 불리는 버그가 존재하고 있다. 전방에 도로 구조물이 있거나 하는 경우에, 레이더 센서가 도로상 장애물이 있는지에 대한 정확한 판단을 하지 못하여 사고 예방 차원에서 제동 동작을 하는 문제이다. 최근에 테슬라 시스템을 해킹하여 관찰하는 해커에 따르면, 레이더 센서가 이런 구조물에 접근할 때 해상도등의 문제로 반사되어 장애물이 존재할 가능성이 높아지는 것을 시연해 보였다. 결국 이 문제의 완전한 해결은 전방의 시야에 대한 정확한 분석으로 장애물 유무에 대한 판단 능력을 높이는 방법밖에 없을 것으로 보인다. 특히 후방에 차간 간격을 매우 좁게 유지하는 차량이 따라오고 있을 때 사고의 위험이 존재하게 되어 불편함을 호소하는 사용자들이 있다.</li>
 <br>
-<li>자동 비상 제동(automated emergency braking) - 2020년 대만에서의 사고를 비롯하여, 전방에 장애물이 있을 때 테슬라 자동차의 자동 비상 제동이 너무 늦거나 충분하지 않게 작동한다는 지적이 있다. 앞으로 개선되어야 할 부분이나, 해당 사고 등에서 테슬라 자동차의 "전방 충돌 경고 기능"이 "끔, 둔감, 보통, 민감"중 어떤 설정으로 되어 있는지는 명시되지 않았다. 따라서 이런 문제를 우려한다면 항상 전방을 주시하여야 하고, 테슬라 소프트웨어 설정에서 "전방 충돌 경고 기능"을 "민감"으로 설정하는 것이 바람직 하다.
+<li><span>자동 비상 제동(automated emergency braking)</span>- 2020년 대만에서의 사고를 비롯하여, 전방에 장애물이 있을 때 테슬라 자동차의 자동 비상 제동이 너무 늦거나 충분하지 않게 작동한다는 지적이 있다. 앞으로 개선되어야 할 부분이나, 해당 사고 등에서 테슬라 자동차의 "전방 충돌 경고 기능"이 "끔, 둔감, 보통, 민감"중 어떤 설정으로 되어 있는지는 명시되지 않았다. 따라서 이런 문제를 우려한다면 항상 전방을 주시하여야 하고, 테슬라 소프트웨어 설정에서 "전방 충돌 경고 기능"을 "민감"으로 설정하는 것이 바람직 하다.
 </li>
 <br>
-<li>차선 변경 - 변경하여 들어갈 차선 공간을 평가하여 차선을 변경하는 것은 사람이 사각지대를 확인하면서 변경하는 것보다 훨씬 안전함을 느낄 수 있다. 차선 변경 신호만 넣으면 옆차선의 상황을 미리 확인하여 필요할 경우 속도를 줄이거나 가속하여 신속하게 끼어 들기를 시도한다. 다른 차가 그 공간에 접근해 오기 때문에 차선 변경이 위험할 경우, 빨간색으로 차선을 시각화하여, 사람이 가끔 실수를 저지르는 것보다 훨씬 안전하고 탁월한 성능을 보인다. 단, 일부 구간에서 차선 변경시 변경할 차선의 공간 확인이 확실하지 않아서 사고 예방 차원에서 원래 차선으로 되돌아 오는 문제가 보고 되고 있다.</li>
+<li><span>차선 변경</span>- 변경하여 들어갈 차선 공간을 평가하여 차선을 변경하는 것은 사람이 사각지대를 확인하면서 변경하는 것보다 훨씬 안전함을 느낄 수 있다. 차선 변경 신호만 넣으면 옆차선의 상황을 미리 확인하여 필요할 경우 속도를 줄이거나 가속하여 신속하게 끼어 들기를 시도한다. 다른 차가 그 공간에 접근해 오기 때문에 차선 변경이 위험할 경우, 빨간색으로 차선을 시각화하여, 사람이 가끔 실수를 저지르는 것보다 훨씬 안전하고 탁월한 성능을 보인다. 단, 일부 구간에서 차선 변경시 변경할 차선의 공간 확인이 확실하지 않아서 사고 예방 차원에서 원래 차선으로 되돌아 오는 문제가 보고 되고 있다.</li>
 <br>
-<li>고속도로 자율주행 - 내비게이션 오토파일럿은 2018년 처음 출시 이후 15개월 동안 개선되어 2019년 말에 한국에서도 출시하였다. 운전자가 핸들에 손을 올리며 전방을 주시하는 것을 전제로, 오토파일럿이 직접 판단하여 차선을 변경하여 고속도로 진입로부터 시작하여, 앞차의 거리에 따라 필요한 가속을 하거나 감속을 하고, 전용차선을 식별하며 차선도 변경하고, 전용차선도 식별하고, 고속도로 진출로까지 진행할 수 있는 편리한 기능이다. 다만 아직 정체길에 적용하기는 어려우며, 또한 진출로로 나갈 경우 감속을 하지 않는 오류도 있기에(개선될 예정) 위에 언급한 대로 운전자는 항상 개입할 준비를 해야 한다.
+<li><span>고속도로 자율주행</span>- 내비게이션 오토파일럿은 2018년 처음 출시 이후 15개월 동안 개선되어 2019년 말에 한국에서도 출시하였다. 운전자가 핸들에 손을 올리며 전방을 주시하는 것을 전제로, 오토파일럿이 직접 판단하여 차선을 변경하여 고속도로 진입로부터 시작하여, 앞차의 거리에 따라 필요한 가속을 하거나 감속을 하고, 전용차선을 식별하며 차선도 변경하고, 전용차선도 식별하고, 고속도로 진출로까지 진행할 수 있는 편리한 기능이다. 다만 아직 정체길에 적용하기는 어려우며, 또한 진출로로 나갈 경우 감속을 하지 않는 오류도 있기에(개선될 예정) 위에 언급한 대로 운전자는 항상 개입할 준비를 해야 한다.
 </li>
 <br>
-<li>주차장 무인 운행 - 스마트 차량 호출의 경우는 데모로서 재미있게 볼 수 있지만 복잡한 상황에서는 이용하지 않는 것이 바람직하다.</li>
+<li><span>주차장 무인 운행</span>- 스마트 차량 호출의 경우는 데모로서 재미있게 볼 수 있지만 복잡한 상황에서는 이용하지 않는 것이 바람직하다.</li>
 <br>
-<li>도로 사물 인식 - 도로 표지, 도로 신호등, 도로 장애물등을 인식하는 기능이 2019년 말에 출시되어, 고속도로 뿐만 아니라 국도에서도 운전보조기능으로 운전자의 편의를 도울 수 있게 되었다. 다만 운전자가 꼭 필요한 상황 외에는 대부분의 운전을 맡길 수 있는 "자율주행 레벨 3"은 아니다. 운전자가 운전편의를 돕는 것이므로 현재 자율주행 2단계인 운행보조 기능으로 분류되고 있다.</li>
+<li><span>도로 사물 인식</span>- 도로 표지, 도로 신호등, 도로 장애물등을 인식하는 기능이 2019년 말에 출시되어, 고속도로 뿐만 아니라 국도에서도 운전보조기능으로 운전자의 편의를 도울 수 있게 되었다. 다만 운전자가 꼭 필요한 상황 외에는 대부분의 운전을 맡길 수 있는 "자율주행 레벨 3"은 아니다. 운전자가 운전편의를 돕는 것이므로 현재 자율주행 2단계인 운행보조 기능으로 분류되고 있다.</li>
 <br>
-<li>신호등 및 정지 표지판 제어(Traffic Light and Stop Sign Control / Beta) - 안드레 카패시의 설명처럼 일상적인 정지 신호 뿐만 아니라, 공사 구간에서 정지신호를 수신호로 하고 있는 공사 요원의 신호를 인식하며, 미국의 학교 버스에 달려 있는 정지신호가 펼쳐져 있는지 접혀져 있는지를 인식, 또 나무 가지 등에 의해서 가려진 신호판을 인식하는 등 상당한 발전을 보이고 있다. 정지신호를 실수로 지나치려고 할 경우 자동으로 정지하는 기능도 지속적으로 발전되고 있다. 7월 기준(2020.28.x)으로 정지하는 수준이 인간 운전자보다 너무 빨리 감속을 하는 경향이 있다.
+<li><span>신호등 및 정지 표지판 제어(Traffic Light and Stop Sign Control / Beta)</span> - 안드레 카패시의 설명처럼 일상적인 정지 신호 뿐만 아니라, 공사 구간에서 정지신호를 수신호로 하고 있는 공사 요원의 신호를 인식하며, 미국의 학교 버스에 달려 있는 정지신호가 펼쳐져 있는지 접혀져 있는지를 인식, 또 나무 가지 등에 의해서 가려진 신호판을 인식하는 등 상당한 발전을 보이고 있다. 정지신호를 실수로 지나치려고 할 경우 자동으로 정지하는 기능도 지속적으로 발전되고 있다. 7월 기준(2020.28.x)으로 정지하는 수준이 인간 운전자보다 너무 빨리 감속을 하는 경향이 있다.
 </li>
 <br>
-<li>신호등 및 정지 표지판 제어 녹색신호 인식 - 2020년 6월 출시된 녹색신호 인식 기능은 이전에 정지선이 빨간색으로만 표시되던 것이 선행차량이 있고 녹색신호가 있으면 정지선이 녹색으로 변경되면서 운전자의 입력없이 진행된다. 이미 몇년 동안 오토파일럿은 선행 차량이 있으면 그를 따라서 교차로를 통과하고 있어 왔었으나, 교통 신호가 녹색인지 적색인지에 대한 인식이 없던 것이 교통신호를 확인하는 것이 차이점이다. 선행차량이 없는 경우 속도를 교차로에 접근할 때 약간씩 줄이며 운전자가 가속 페달을 밟으면 다시 정상 속도로 운행한다. 상당히 부드러운 동작을 하여 기본 설정으로 두고 사용하기에 큰 불편이 없는 상태이다.</li>
+<li><span>신호등 및 정지 표지판 제어 녹색신호 인식</span> - 2020년 6월 출시된 녹색신호 인식 기능은 이전에 정지선이 빨간색으로만 표시되던 것이 선행차량이 있고 녹색신호가 있으면 정지선이 녹색으로 변경되면서 운전자의 입력없이 진행된다. 이미 몇년 동안 오토파일럿은 선행 차량이 있으면 그를 따라서 교차로를 통과하고 있어 왔었으나, 교통 신호가 녹색인지 적색인지에 대한 인식이 없던 것이 교통신호를 확인하는 것이 차이점이다. 선행차량이 없는 경우 속도를 교차로에 접근할 때 약간씩 줄이며 운전자가 가속 페달을 밟으면 다시 정상 속도로 운행한다. 상당히 부드러운 동작을 하여 기본 설정으로 두고 사용하기에 큰 불편이 없는 상태이다.</li>
 
 </div>
 <p><font size="10" color="red"><strong>실제 주행 영상</strong></font></p>
